@@ -27,6 +27,8 @@ PHP_METHOD(Phalcon_Events_Event, getType);
 PHP_METHOD(Phalcon_Events_Event, getSource);
 PHP_METHOD(Phalcon_Events_Event, setData);
 PHP_METHOD(Phalcon_Events_Event, getData);
+PHP_METHOD(Phalcon_Events_Event, stop);
+PHP_METHOD(Phalcon_Events_Event, isStopped);
 
 ZEND_BEGIN_ARG_INFO_EX(arginfo_phalcon_events_event___construct, 0, 0, 2)
 	ZEND_ARG_INFO(0, type)
@@ -49,6 +51,8 @@ PHALCON_INIT_FUNCS(phalcon_events_event_method_entry){
 	PHP_ME(Phalcon_Events_Event, getSource, NULL, ZEND_ACC_PUBLIC) 
 	PHP_ME(Phalcon_Events_Event, setData, arginfo_phalcon_events_event_setdata, ZEND_ACC_PUBLIC) 
 	PHP_ME(Phalcon_Events_Event, getData, NULL, ZEND_ACC_PUBLIC) 
+	PHP_ME(Phalcon_Events_Event, stop, NULL, ZEND_ACC_PUBLIC) 
+	PHP_ME(Phalcon_Events_Event, isStopped, NULL, ZEND_ACC_PUBLIC) 
 	PHP_FE_END
 };
 
